// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'recommended' > Plain TS (bad) 1`] = `
[
  {
    "column": 7,
    "endColumn": 25,
    "endLine": 5,
    "line": 5,
    "messageId": "noInferrableType",
    "nodeType": "VariableDeclarator",
    "ruleId": "@typescript-eslint/no-inferrable-types",
  },
  {
    "column": 7,
    "endColumn": 12,
    "endLine": 5,
    "line": 5,
    "messageId": "unusedVar",
    "nodeType": null,
    "ruleId": "@typescript-eslint/no-unused-vars",
  },
  {
    "column": 10,
    "endColumn": 13,
    "endLine": 8,
    "line": 8,
    "messageId": "unusedVar",
    "nodeType": null,
    "ruleId": "@typescript-eslint/no-unused-vars",
  },
  {
    "column": 14,
    "endColumn": 26,
    "endLine": 17,
    "line": 17,
    "messageId": "anyAssignment",
    "nodeType": "VariableDeclarator",
    "ruleId": "@typescript-eslint/no-unsafe-assignment",
  },
  {
    "column": 20,
    "endColumn": 24,
    "endLine": 17,
    "line": 17,
    "messageId": "unsafeCall",
    "nodeType": "Identifier",
    "ruleId": "@typescript-eslint/no-unsafe-call",
  },
]
`;

exports[`'recommended' > Plain TS (good) 1`] = `[]`;

exports[`'recommended' > React JSX (bad) 1`] = `
[
  {
    "column": 10,
    "endColumn": 13,
    "endLine": 4,
    "line": 4,
    "messageId": "unusedVar",
    "nodeType": "Identifier",
    "ruleId": "no-unused-vars",
  },
  {
    "column": 20,
    "endColumn": 24,
    "endLine": 14,
    "line": 14,
    "messageId": "undef",
    "nodeType": "Identifier",
    "ruleId": "no-undef",
  },
]
`;

exports[`'recommended' > React JSX (good) 1`] = `[]`;

exports[`'recommended' > plain JS (bad) 1`] = `
[
  {
    "column": 10,
    "endColumn": 13,
    "endLine": 4,
    "line": 4,
    "messageId": "unusedVar",
    "nodeType": "Identifier",
    "ruleId": "no-unused-vars",
  },
  {
    "column": 26,
    "endColumn": 46,
    "endLine": 12,
    "line": 12,
    "messageId": "noJSXWithExtension",
    "nodeType": "JSXElement",
    "ruleId": "react/jsx-filename-extension",
  },
  {
    "column": 20,
    "endColumn": 24,
    "endLine": 15,
    "line": 15,
    "messageId": "undef",
    "nodeType": "Identifier",
    "ruleId": "no-undef",
  },
]
`;

exports[`'recommended' > plain JS (good) 1`] = `[]`;
